# cramberry

./: .gitignore  .golangci.yml  ARCHITECTURE.md  BENCHMARKS.md  CHANGELOG.md  CODE_REVIEW.md  GUIDE.md  IMPLEMENTATION_PLAN.md  LICENSE  Makefile  OPTIMIZATION_PLAN.md  PRERELEASE_IMPLEMENTATION_PLAN.md  PRERELEASE_PROGRESS_REPORT.md  README.md  REFACTORING.md  REMEDIATION_PLAN.md  ROADMAP.md  go.mod  go.sum
.github/workflows/: benchmark.yml  ci.yml  release.yml
benchmark/: README.md  benchmark_test.go
benchmark/schemas/: messages.cram  messages.cramberry  messages.proto
cmd/cramberry/: main.go
docs/: CONTRIBUTING.md  MIGRATION.md  SCHEMA_LANGUAGE.md  SECURITY.md
examples/: user.cramberry
examples/basic/: main.go
examples/polymorphic/: main.go
examples/schemas/: user.cram
examples/streaming/: main.go
internal/wire/: fixed.go  fixed_test.go  tag.go  tag_test.go  varint.go  varint_test.go
pkg/codegen/: generator.go  generator_test.go  go_generator.go  rust_generator.go  rust_generator_test.go  typescript_generator.go  typescript_generator_test.go
pkg/cramberry/: benchmark_test.go  concurrent_test.go  edge_cases_test.go  errors.go  errors_test.go  forward_compat_test.go  fuzz_test.go  marshal.go  marshal_test.go  pool.go  reader.go  reader_test.go  registry.go  registry_test.go  security_test.go  stream.go  stream_test.go  types.go  types_test.go  unmarshal.go  wire_v2.go  writer.go  (+2 more)
rust/: Cargo.toml
rust/src/: error.rs  lib.rs  reader.rs  registry.rs  stream.rs  types.rs  writer.rs
typescript/: package-lock.json  package.json  tsconfig.json
(+46 files in other folders)
